--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "ipykernel>=6.29.0",
     "notebook>=7.0.0",
     "nest-asyncio>=1.6.0",
+    "pytz>=2024.1",
 ]
 
 [project.optional-dependencies]
